# macros

./: .pre-commit-config.yaml  Cargo.toml  README.md  cliff.toml
examples/: auto_deref.rs  enum_macros.rs  enum_macros_darling.rs  enum_macros_with_genetics.rs  my_ready.rs  my_try.rs  my_vec.rs
src/: auto.rs  enum_from.rs  enum_from_darling.rs  lib.rs
