[package]
name = "macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
anyhow = "1.0.86"
futures = "0.3.30"
tokio = { version = "1.37.0", features = ["macros", "rt", "rt-multi-thread"] }
